@@ -1,3 +1,8 @@
+2020-10-08  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-tests.el (tramp-test32-shell-command-dont-erase-buffer):
+	Adapt test.  Tag it :unstable.
+
 2020-09-04  Eli Zaretskii  <eliz@gnu.org>
 
 	Fix 'expand-file-name' for remote files
